# snake

./: .gitignore  CMakeLists.txt  README.md
src/: game.cpp  game.hpp  main.hpp  maths.cpp  maths.hpp  snake.cpp  snake.hpp
test/: CMakeLists.txt
